Version 1.5.3+svn:
 * Campaigns:
 * Language and i18n:
   * updated translations:

Version 1.5.3:
 * Campaigns
   * Descent into Darkness
     * Changed how the beginning of the scenario 'Descent into Darkness' works.
     * Changed how the ice breakage works in 'Beginning of the Revenge'.
     * Many minor fixes and tweaks to various scenarios.
     * New graphics for Apprentice Necromancer and Dark Mage.
     * New indoor maps for 'A Small Favor' parts 2 and 3.
   * Sceptre of Fire
     * Fixed a bug that allowed one to finish 'The Dragon' by defeating both
       enemy leaders.
     * Fixed a coordinate bug that caused 'Hills of the Shorbear Clan' to not
       end when it was supposed to.
   * Son of the Black Eye
     * Fixed the shamans not getting removed from the recall list when they
       should.
     * New portraits for Inarix, Jetto and the old orcish shaman.
     * Reworked the scenarios 'Civil War' and 'Coward'.
 * Editor2
   * Future replacement for wesnoth_editor, launched from title menu or via
     wesnoth -e. Most old editor's features are duplicated, with some
	 improvements.
   * Built by default in scons, cmake and autotools, if building manually
     see RELEASE_NOTES.
   * See http://www.wesnoth.org/wiki/Editor2 for details and known issues.
 * Language and i18n:
   * updated fonts: DejaVuSans 2.26
   * updated translations: Chinese (Traditional), Danish, Finnish, Galician,
     German, Italian, Latvian, Lithuanian, Polish, Russian, Slovak, Spanish
 * Multiplayer:
   * Removed the "Great War" MP era
   * Revised maps: Caves of the Basilisk, Den of Onis, Fallenstar Lake,
     Silverhead Crossing, Sullas Ruins, The Freelands, Alirok Marsh, Island of
     the Horatii, 3p Morituri, Blue Water Province, 4p Hamlets, Lagoon,
     4p Morituri, The Wilderlands, Waterloo Sunset
 * Music and sound effects:
   * Engine automatically plays special music on defeat or victory; default