@@ -77,6 +77,19 @@
 [/hotkey]
 
 [hotkey]
+	command="editor-clipboard-rotate-cw"
+	key="r"
+	{IF_APPLE_CMD_ELSE_CTRL}
+[/hotkey]
+
+[hotkey]
+	command="editor-clipboard-rotate-ccw"
+	key="r"
+	shift=yes
+	{IF_APPLE_CMD_ELSE_CTRL}
+[/hotkey]
+
+[hotkey]
 	command="editor-tool-next"
 	key="n"
 [/hotkey]
