@@ -3,6 +3,11 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.5.3:
+  * Editor2
+    * Rotate clipboard 60 degrees clockwise or counter-clockwise, ctrl+r
+	  or ctrl+shift+r respectively (cmd instead of ctrl on Mac). Active
+	  in the "paste" mode.
+	
   * Language and translations
     * updated translations:
 
